--- a/filter.css
+++ b/filter.css
@@ -1,40 +1,127 @@
 .heading {
-top: 117px;
-left: 113px;
-width: 514px;
-height: 51px;
-text-align: left;
-font: normal normal bold 36px/55px Poppins;
-letter-spacing: 0px;
-color: #192F60;
-opacity: 1
-
+    top: 117px;
+    left: 113px;
+    width: 514px;
+    text-align: left;
+    font: normal normal bold 36px/55px Poppins;
+    color: #192F60;
+    margin: 20px;
 }
-.container-fluid{
+
+.container-fluid {
     position: relative;
     margin: 0 auto;
     padding: 0 20px;
-    
-}
-.left{
-    max-width: 200px;
-    border: 3px solid black;
 
 }
-.right{
+
+.left {
+    max-width: 200px;
+    padding: 20px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+
+}
+
+.right {
     position: absolute;
     display: inline-block;
     top: 5px;
-    left: 35%;   
-   
+    left: 25%;
 }
-.img{
+
+.img {
     border-radius: 20px;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    padding: 5px;
+}
+
+.hello {
+    position: relative;
+    background-color: #CE0505;
+    margin: 10px;
+    padding: 10px;
+    height: 60px;
+}
+
+.logo {
+    position: absolute;
+    background-color: white;
+    color: red;
+    font-size: 30px;
+    border-radius: 50%;
+    margin-left: 50px;
+    width: 40px
+}
+
+.login {
+    font-size: 10px;
+    padding: 10px;
+    color: #FFFFFF;
+    font: normal normal medium 16px/25px Poppins;
+}
+
+.button {
+    background-color: #CE0505;
+    font-size: 10px;
+    padding: 10px;
+    margin-right: 50px;
+    font: normal normal medium 16px/25px Poppins;
+    color: #FFFFFF;
+}
+
+.heading1 {
+    font: normal normal 600 30px/46px Poppins;
+    letter-spacing: 0px;
+    color: #192F60;
+}
+
+.subheading {
+    text-align: left;
+    font: normal normal medium 16px/30px Poppins;
+    letter-spacing: 0px;
+    color: #192F60;
+}
+
+.cuisine {
+    font: normal normal normal 16px/30px Poppins;
+    color: #636F88;
+    margin: 10px;
+    padding: 0px;
+}
+
+.add {
+    text-align: left;
+    font: normal normal normal 16px/30px Poppins;
+    letter-spacing: 0px;
+    color: #636F88;
+    margin: 10px;
+}
+
+.Bakery {
+    font: normal normal normal 16px/30px Poppins;
+    letter-spacing: 0px;
+    color: #192F60;
+    margin: 10px;
+    padding: 0px;
     
 }
-.subheading{
-    text-align: left;
+
+.first {
+    max-width: 700px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.second {
+    max-width: 700px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+.btn {
+    border: 20px;
+    margin: 20px;
+    padding: 10px;
+    height: 50px;
+    border-radius: 10px;
+    border: 1px solid #8C96AB;
 }
